--- a/config.yaml
+++ b/config.yaml
@@ -2,19 +2,20 @@
 # Data configurations --------------------------------------
 json_filename: "file_list.json"  # name of json file containing root file paths
 dataset_name: "2024I"            # name of key within json containing dataset
-has_scores: True                          # whether the files contain axo anomaly score branches
-axo_version: "v4"                               # which axo version to use for score hists
+has_scores: True                 # whether the files contain axo anomaly score branches
+axo_version: "v4"                # which axo version to use for score hists
+use_emulated_score: False        # whether to use emulated axo score instead of the DST paths
 
 # Coffea configurations  --------------------------------------
-n_files: -1                             # number of files to process (-1 for all)
+n_files: -1                               # number of files to process (-1 for all)
 coffea_step_size: 200_000                 # step size for coffea processor
 coffea_files_per_batch: 1                 # files per batch for coffea processor
 coffea_max_chunks: 300000                 # maximum number of chunks to process
-do_preprocessing: True                  # create a preprocessing json file
+do_preprocessing: True                    # create a preprocessing json file
 preprocessing_file: "preprocessed.json"
 visualize_task_graph: False               # save task graph as pdf (only use when processing 1 or 2 files)
 save_hists: True                          # save histograms using pickle
-save_branches: False                       # save branches to parquet file
+save_branches: False                      # save branches to parquet file
 branch_writing_path: "root://eosuser.cern.ch://eos/user/"  # where to save output parquet files, if enabled
 
 
@@ -44,12 +45,12 @@ diobject_pairings: # Which invariant mass pairs to consider
     # - ["L1Jet","L1EG"]
     # - ["L1Jet","L1Mu"]
     
-    scouting:
-    - ["ScoutingPFJet","ScoutingPFJet"]
-    - ["ScoutingElectron","ScoutingElectron"]
-    - ["ScoutingMuonVtx","ScoutingMuonVtx"]
-    - ["ScoutingElectron", "ScoutingMuonVtx"]
-    - ["ScoutingPFJet", "ScoutingPhoton"]
+    # scouting:
+    # - ["ScoutingPFJet","ScoutingPFJet"]
+    # - ["ScoutingElectron","ScoutingElectron"]
+    # - ["ScoutingMuonVtx","ScoutingMuonVtx"]
+    # - ["ScoutingElectron", "ScoutingMuonVtx"]
+    # - ["ScoutingPFJet", "ScoutingPhoton"]
 
     
 # Histograms to make ---------------------------------------
@@ -57,7 +58,7 @@ histograms_1d:
     per_event: # histograms to make per event
     # - "anomaly_score"
     - "ht"
-    - "met"
+    # - "met"
     # - "mult"
     # - "pt"
     # per_object_type: # histograms by object type, e.g. total L1 jet multiplicity & pT of all L1 jets in event
