--- a/config.yaml
+++ b/config.yaml
@@ -5,6 +5,7 @@ dataset_name: "2024I"            # name of key within json containing dataset
 has_scores: True                 # whether the files contain axo anomaly score branches
 axo_version: "v4"                # which axo version to use for score hists
 use_emulated_score: False        # whether to use emulated axo score instead of the DST paths
+is_l1nano: False                 # whether files are l1nano format (assumed scouting nano if False)
 
 # Coffea configurations  --------------------------------------
 n_files: -1                               # number of files to process (-1 for all)
