--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,8 @@
 json_filename: "file_list.json"  # name of json file containing root file paths
 dataset_name: "2024I"            # name of key within json containing dataset
 has_scores: True                 # whether the files contain axo anomaly score branches
-axo_version: "v4"                # which axo version to use for score hists
+axo_version: "v4"                # which axo version to use when using emulated values
+cicada_version: "2024"            # which cicada version to use when using emulated values
 use_emulated_score: False        # whether to use emulated axo score instead of the DST paths
 is_l1nano: False                 # whether files are l1nano format (assumed scouting nano if False)
 
