--- a/plotting_config.yaml
+++ b/plotting_config.yaml
@@ -2,6 +2,7 @@ cms_label : 'Preliminary'  # appears next to 'CMS' on top of plot
 normalized : False #True #
 log_scale : True 
 #log_scale : False
+use_xlims : True
 
 module : "efficiency"
 #module : "default"
@@ -110,7 +111,7 @@ rebin:
     "anomaly_score" : 10
     "axo_score" : 10
     "cicada_score" : 2
-    "l1_ht" : 6
+    "l1_ht" : 5
     "l1_met" : 2
     "L1Jet_L1Jet_mass" : 3 #10
     "L1Mu_L1Mu_mass" : 2
@@ -121,5 +122,11 @@ rebin:
     "ScoutingPFJet_ScoutingPFJet_mass" : 20
     "ScoutingElectron_ScoutingElectron_mass" : 2
     "ScoutingMuonVtx_ScoutingMuonVtx_mass" : 1
+
+xlims:
+    "l1_ht": [0,1000] # GeV
+    "l1_met": [0,170] # GeV
+    "axo_score" : [0,1000]
+    "cicada_score" : [0,160]
     
 
